--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,8 @@
 /*  LOGO E MENU PRINCIPALE */
 
 div.menu-principale {
-  height: 10vh;
-  background-color: #ff66ff;
-
-
+  min-height: 10vh;
+  /* background-color: #ff66ff; */
 }
 
 .menu-principale>img {
@@ -38,30 +36,41 @@ div.menu-principale {
 
 
 
-div.banner {
+.banner {
   position: relative;
-  height: 40vh;
+  min-height: 40vh;
   margin-top:2vh;
-}
-.banner>img {
-  height: 100%;
-  width: 100%;
-}
-.textyoga {
-  width: 60%;
+  background-image: url(../img/banner.jpg);
+  background-position: center;
 
-  position: absolute;
-  top: 60%;
-  margin-left: 5%;
 }
-.textyoga>p {
+
+.textyoga {
+  position: absolute;
+  margin-left: 5%;
+  bottom: 10%;
+  width: 60%;
+  z-index: 2;
+}
+#title {
   font-size: 30px;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
 }
 #sub {
   font-size: 15px;
-
+  color: white;
 }
 
+.layover {
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
 
 /* CONTENITORE */
 /* CLEARFIX */
@@ -73,47 +82,87 @@ div.banner {
 }
 div.contenitore {
   height: 35vh;
-  background-color: #1ab2ff;
+  /* background-color: #1ab2ff; */
   margin:2vh;
   margin-left: auto;
   margin-right:auto;
 }
 
 
-
-
-
 /* CONTENUTO DEL CONTENITORE */
 
-div.top {
-  height: 20%;
-  background-color: #cce6ff;
+.top {
+  min-height: 20%;
+  /* background-color: #cce6ff; */
   margin-bottom: 1%;
+  position: relative;
+
 }
+/* CONTENT */
 
 .content {
-
-  height: 70%;
-  width: 15%;
-  background-color: #cce6ff;
   float: left;
+  width: 20%;
+
+
+
 }
+/* .imgcontent {
+  height: 50%;
+  background-image: url(../img/img-1.jpg);
+  background-position: center;
+  background-size: 75%;
+  background-repeat: no-repeat;
+} */
+.textcontent {
+
+  background-color: green;
+
+}
+
+
+
+.contentlayover {
+  background-color: rgba(0, 0, 0, 0.2);
+  top: 0;
+  bottom: 0;
+  z-index: 5;
+}
+
+.imgcontent {
+  width: 100%;
+  display: block;
+  border-radius: 15px;
+  z-index: 2;
+
+}
+
+#imgcontentlayover {
+
+  object-fit:cover;
+  width: 100%;
+  height: 150px;
+  margin-bottom: 2px;
+  border-radius: 15px;
+}
+
 
 .middle {
   /* quando metterò il contenuto potrò togliere l'altezza, perchè sarà data dal contenuto */
-  background-color: #cce6ff;
-  height: 70%;
-  width: 60%;
+  /* background-color: #cce6ff; */
+
+  width: 50%;
   float:left;
   margin-left: 5%;
   margin-right: 5%;
+  border: 1px solid black;
 }
 
 /* FOOTER */
 
 div.finale {
-  height: 6vh;
-  background-color: #8000ff;
-  margin-top:1vh;
 
+  /* background-color: #8000ff; */
+  margin-top:1vh;
+  text-align: center;
 }
